* Ensure the div test element is removed from the document. [jddalton]

* Make NWMatcher work when embedded in XHTML or XML documents. [jddalton]

* Ensure ancestor/descendant resolvers don't end on the document node. [Diego Perini]

* Removed the client_api() named expression for Safari 2 support. [Diego Perini]

* Refine the `reValidator` regexp. [jddalton, Diego Perini]

* Remove unused methods getChildren() and getNextSibling(). [Diego Perini]

* Rewrite client_api() to avoid extra optimizations that are handled better by the selector compiler. [Diego Perini, jddalton]

* Add wildcard `*` tagName processing to the `RE_SIMPLE_SELECTOR` regexp for non-IE browsers. [Diego Perini]

* Add `context` fallback to byClass(). [Diego Perini]

* Fix `of-type` selectors when no context is given by removing the `indexesByTag` cache. [Diego Perini]

* Make `RE_BUGGY_QSAPI` filter out selectors that cause IE to throw errors. [jddalton]

* Fix a bug in the compiler for a selector like `.a1 ~ *` throwing an error when the W3C element traversal api is supported. [jddalton]

* unit test: Add Slick XML unit test and fix a bug with JSSpec in Opera 9.64. [jddalton]

* Ensure feature test results return boolean values and make BUGGY_GEBCN test against a string and not a regexp. [jddalton]

* unit test: Add Slick unit tests. [jddalton]

* Add NW.Dom.setQSA(enabled) to allow testing NW.Dom.select() with and without using querySelectorAll(). [jddalton]

* Ensure element.style and element.className exist before attempting to access properties on them. [jddalton]

* Cleanup feature tests making them more consistent. [jddalton]

* Ensure getElementsByClassName(), getElementById(), getElementsByName(), and getElementsByTagName() exist on elements before calling them. [jddalton]

* Optimize prefiltering in client_api() avoding extra processing if `parts[1]` matches are undefined and allow filtering of selectors containing `:not` again. [jddalton]
